--- a/public/table.css
+++ b/public/table.css
@@ -1,3 +1,15 @@
+@media print{
+  @page {  
+    size:80mm;  
+  }
+  html, body{
+    width: 80mm;
+  }
+  .table-container {
+    width: 80mm;
+  }
+}
+
 .table-container {
   width: 80mm;
 }
